# faktofon-verifier-latest

./: .env.example  Makefile  README.md  docker-compose.yml
agent/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  pyrightconfig.json  wrangler.jsonc
agent/data/: dataset.json  original-cards.json
agent/src/: dataset.py  graph.py  main.py  prompts.py  schema.py  state.py  utils.py  validation.py
agent/src/branches/: action_routing_branch.py  analyze_information_source_branch.py
agent/src/nodes/: aggregate_statement_verification_analysis.py  llm_analyse_information_source.py  llm_analyse_statement_verifiability.py  llm_recommend_blocks.py  llm_recommend_information_source.py  llm_recommend_statement_variants.py
bruno-workspace/: workspace.yml
client/: .env.example  Dockerfile  README.md  original-examples.json  package.json  pnpm-lock.yaml  rootDoc.client.ts  tsconfig.json  types.ts  vite.config.ts
client/app/: app.css  entry.client.tsx  layout.tsx  root.tsx  routes.ts
client/components/: SyncControls.tsx  app.tsx  button.tsx  card-editor-block-list.tsx  data-table-experimental.tsx  data-table.tsx  document-list.tsx  editor-header.tsx  editor-menu-portal.tsx  editor.tsx  info-message.tsx  input.tsx  menu.tsx  preview-card.tsx  preview.tsx  prompt-button.tsx  source-editor.tsx  source-list.tsx  source-type-select.tsx  source-verification-analysis.tsx  statement-editor.tsx  statement-verifiability-analysis.tsx  statement-verification-analysis.tsx  toggle.tsx  topic-combobox.tsx
client/experiment/: editor.client.tsx
(+19 files in other folders)
