[project]
name = "faktofon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langsmith>=0.4.30",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.2.0",
    "mlflow==3.9.0",
    "pandas>=2.2.0",
    "ipython>=9.5.0",
    "isodate>=0.7.2",
    "langchain-community>=0.3.31",
    "selenium>=4.41.0",
    "unstructured>=0.21.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.basedpyright]
typeCheckingMode = "basic"
